# token-core

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
TokenCoreXExample/TokenCoreXExample/: AppDelegate.swift  ViewController.swift
TokenCoreXExample/TokenCoreXExample.xcodeproj/: project.pbxproj
android/app/: build.gradle
android/tokencore/: build.gradle
docs/: API.zh.md  BUILD.md  BUILD.zh.md  FAQ.md  INTEGRATION.md  KEYS.zh.md  README.md  TECH.zh.md  TRON_SPEC.zh.md  keys.adoc  tron.adoc
examples/RN/: README.md  app.json  index.js  package.json
examples/TokenCoreX/: .gitignore  .travis.yml  LICENSE  README.md  TokenCoreX.podspec
examples/android/: build.gradle  settings.gradle
examples/iOSExample/: .gitignore  Podfile
rust/: .gitignore  Cargo.toml  bootstrap.sh  build.rs
rust/bitcoin-cash/: Cargo.toml
rust/bitcoin-cash/src/: bch_coin.rs  bch_transaction.rs  bip143_with_forkid.rs  bitcoin_cash_transaction_signer.rs  bitcoin_transaction_signer.rs  errors.rs  hard_wallet_keystore.rs  hd_mnemonic_keystore.rs  lib.rs
rust/chain/: Cargo.toml
rust/chain/src/: coin.rs  curve.rs  keystore.rs  lib.rs  signer.rs  v3mnemonic_keystore.rs
rust/crypto/: Cargo.toml
rust/crypto/src/: aes.rs  crypto.rs  curve.rs  error.rs  lib.rs  numberic_util.rs
rust/jni/: Cargo.toml  build.rs
rust/jni/src/: lib.rs
rust/src/: lib.rs  main.rs
rust/src/foundation/: mod.rs
rust/src/foundation/crypto/: aes.rs  crypto.rs  encpair.rs  mod.rs
rust/src/foundation/utils/: mod.rs  numberic_util.rs  token_error.rs
rust/src/wallet/keystore/: v3mnemonic_keystore.rs
rust/src/wallet/transaction/: signer.rs
rust/src_bak/: lib.rs
rust/src_bak/foundation/crypto/: aes.rs  crypto.rs
rust/src_bak/foundation/utils/: mod.rs  token_error.rs
rust/src_bak/wallet/: mod.rs
rust/src_bak/wallet/keystore/: mod.rs  v3mnemonic_keystore.rs
rust/src_bak/wallet/transaction/: mod.rs
rust/tcx-lib/: Cargo.toml  tcx.h
rust/tcx-lib/src/: lib.rs  utils.rs
tcx/: API_Index.md  Cargo.toml  README.md  build.rs  cbindgen.toml  tcx.h
tcx-bch/: Cargo.toml
tcx-bch/src/: address.rs  bch_coin.rs  bch_transaction.rs  bip143_with_forkid.rs  errors.rs  hard_wallet_keystore.rs  hd_mnemonic_keystore.rs  lib.rs  transaction.rs
tcx-btc-fork/: Cargo.toml  README.md
tcx-btc-fork/src/: address.rs  bip143_with_forkid.rs  hard_wallet_keystore.rs  lib.rs  signer.rs  transaction.rs
tcx-chain/: Cargo.toml  README.md
tcx-chain/src/: bips.rs  coin.rs  curve.rs  keystore.rs  keystore_guard.rs  lib.rs  signer.rs
tcx-chain/src/keystore/: guard.rs  hd.rs  keystore.rs  mod.rs  private.rs
tcx-ckb/: Cargo.toml
tcx-ckb/src/: address.rs  hash.rs  lib.rs  serializer.rs  signer.rs  transaction.rs  transaction_helper.rs
tcx-common/: Cargo.toml
tcx-common/src/: hash.rs  lib.rs
tcx-constants/: Cargo.toml
tcx-constants/src/: btc_fork_network.rs  coin_info.rs  curve.rs  lib.rs
tcx-crypto/: Cargo.toml  README.md
tcx-crypto/src/: aes.rs  crypto.rs  error.rs  hash.rs  key.rs  lib.rs  numberic_util.rs
tcx-crypto/src/ecc/: mod.rs  secp256k1.rs
tcx-crypto/src/types/: all.rs  error.rs  mod.rs
tcx-eth/: Cargo.toml
tcx-eth/src/: address.rs  lib.rs  singer.rs  transaction.rs  util.rs
tcx-eth2/: Cargo.toml
tcx-eth2/src/: address.rs  lib.rs
tcx-ethereum/: Cargo.toml
tcx-ethereum/src/: address.rs  chain_id.rs  lib.rs  signature.rs  signer.rs  transaction.rs
tcx-ethereum/src/transactions/: mod.rs  transaction.rs
tcx-filecoin/: Cargo.toml
tcx-filecoin/src/: address.rs  key_info.rs  lib.rs  signer.rs  transaction.rs  utils.rs
tcx-fuzz-target/: .gitignore  Cargo.toml
tcx-fuzz-target/hex_in/: valid_1.json  valid_import_mnemonic_wallet.json  valid_init_tcx.json
tcx-fuzz-target/json2pb/: api.proto  index.js  package-lock.json  package.json
tcx-fuzz-target/json_in/: valid_1.json  valid_import_mnemonic_wallet.json  valid_init_tcx.json
tcx-fuzz-target/src/: main.rs
tcx-polkadot/: Cargo.toml
tcx-polkadot/src/: lib.rs
tcx-primitive/: Cargo.toml
tcx-primitive/src/: bip32.rs  bls.rs  bls_derive.rs  constant.rs  derive.rs  ecc.rs  ed25519.rs  ed25519_bip32.rs  error.rs  lib.rs  rand.rs  secp256k1.rs  sr25519.rs  subkey.rs  types.rs
tcx-primitive/src/key/: derive.rs  mod.rs  secp256k1.rs
tcx-proto/: Cargo.toml  build.rs
tcx-proto/src/: api.proto  api_params.proto  btc_fork.proto  cache_derived_key.proto  ckb.proto  eth.proto  ethereum.proto  filecoin.proto  params.proto  solana.proto  substrate.proto  tezos.proto  tron.proto
tcx-solana/: Cargo.toml
tcx-solana/src/: address.rs  construct_transaction.rs  lib.rs  signer.rs  transaction.rs
tcx-substrate/: Cargo.toml
tcx-substrate/src/: address.rs  era.rs  keystore.rs  lib.rs  signer.rs  transaction.rs  tx_serializer.rs
tcx-tester/: .gitignore  Cargo.toml
tcx-tester/hex_in/: valid_import_mnemonic_wallet.json  valid_init_tcx.json
tcx-tester/json2pb/: api_params.proto  index.js
tcx-tester/json_in/: valid_import_mnemonic_wallet.json  valid_init_tcx.json  x_valid_sign_tron.json
tcx-tezos/: Cargo.toml
tcx-tezos/src/: address.rs  lib.rs  signer.rs  transaction.rs
tcx-tron/: Cargo.toml
tcx-tron/src/: address.rs  lib.rs  signer.rs  transaction.rs
tcx-tron/src/protos/: Contract.rs  Discover.rs  Tron.rs  TronInventoryItems.rs  api.rs  mod.rs
tcx/cheader/: tcx.h
tcx/examples/: wallet.rs
tcx/src/: api.proto  api.rs  error_handle.rs  error_handling.rs  filemanager.rs  handler.rs  lib.rs  presenter.rs  utils.rs
tcx/tcx-fuzz-target/: Cargo.toml
tcx/tcx-fuzz-target/in/: valid_1.json
tcx/tcx-fuzz-target/src/: main.rs
test-data/: .gitignore  default_keystore.json  default_keystore_hd.json  default_keystore_pk.json
tools/: android-build.sh  android-example-build.sh  android-rn-example-build.sh  coverage.sh  ios-build.sh  ios-example-build.sh  ios-framework-build.sh  ios-release-build.sh  ios-rn-example-build.sh  ios-token-v2-build.sh
trezor-crypto/: CMakeLists.txt
zksync-crypto/: Cargo.toml
(+154 files in other folders)
