[workspace]
members = [
    "tcx-proto",
    "tcx-constants",
    "tcx-primitive",
    "tcx-crypto",
    "tcx-chain",
    "tcx-tron",
    "tcx-btc-fork",
    "tcx-bch",
    "tcx-ckb",
    "tcx",

    "tcx-tester",
]


[source.crates-io]
registry = "https://github.com/rust-lang/crates.io-index"
replace-with = 'ustc'
[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"