[package]
name = "token_core_x"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"


[dependencies]
jni = { version = "0.10.2", default-features = false }
libc = "0.2.0"
log = "0.4.6"
bitcoin = '0.18.0'
secp256k1 = '0.12.2'
rand = "0.6"
tiny-bip39 = "0.6.0"
ring = "0.14.6"
bitcoin_hashes = "0.3.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rust-crypto = "^0.2"
uuid = { version = "0.7", features = ["serde", "v4"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"

[profile.release]
lto = true

[lib]
name = "token_core_x"
crate-type = ["staticlib", "cdylib"]
#link = "TrezorCrypto"
build = "build.rs"
