[[bin]]
name = "tcx"
path = "src/main.rs"

[package]
name = "tcx"
version = "0.2.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"
autobenches = false

[dependencies]
tcx-lib = { path = "tcx-lib" }

[workspace]
members = [
    "crypto",
    "chain",
    "tcx-lib",
]

[dev-dependencies]
criterion = "0.2"
hex-literal = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"

[profile.release]
lto = true
debug = true
overflow-checks = true


