[package]
name = "tcx-bch"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

[dependencies]
tcx-chain = { path = "../tcx-chain" }
tcx-btc-fork = { path = "../tcx-btc-fork" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }

bch_addr = "0.1.0"
bitcoin = "0.25.1"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
tiny-bip39 = "0.6.0"
bitcoin_hashes = "0.9.3"
#bitcoinconsensus = { version = "0.19.0-2", optional = true }
failure = "0.1.8"
hex = "0.4.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
