[package]
name = "tcx-btc-fork"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-chain = { path = "../tcx-chain" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }

hex = "0.3.2"
base64 = "0.10.1"

bitcoin = "0.25.1"
secp256k1 = {version ="0.22.2", features = ["rand", "recovery"] }
tiny-bip39 = "0.6.2"
bitcoin_hashes = "0.9.3"
#bitcoinconsensus = { version = "0.19.0-2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
uuid = { version = "0.7", features = ["serde", "v4"] }
failure = "0.1.5"
num-bigint = "0.2"
num-traits = "0.2"
num-integer = "0.1"
byteorder = "1.3.2"
bech32 = "0.7.1"
prost = "0.6.1"
bytes = "0.5.4"
prost-types = "0.6.1"


[dev-dependencies]
mockall = "0.4.0"
