[package]
name = "tcx-chain"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-primitive = { path = "../tcx-primitive" }

#bitcoin = { path = "../../../rust-bitcoin"}
bitcoin = "0.20.0"
byteorder = "1.2"
secp256k1 = {version ="0.15", features = ["recovery"] }
#secp256k1 = { path = "../../../rust-secp256k1"}
tiny-bip39 = "0.6.0"
bitcoin_hashes = "0.7"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
failure = "0.1.5"
regex = "1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt"]