[package]
name = "tcx-ckb"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-chain = { path = "../tcx-chain" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }

prost = "0.5.0"
bytes = "0.4.12"
blake2b-rs = "0.1.5"
failure = "0.1.5"
byteorder = "1.3.2"

hex = "0.4.0"

