[package]
name = "tcx-ckb"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-chain = { path = "../tcx-chain" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }

prost = "0.11.2"
bytes = "1.3.0"
blake2b-rs = "0.2.0"
failure = "0.1.8"
byteorder = "1.4.3"
bech32 = "0.9.1"

hex = "0.4.3"
lazy_static = "1.4.0"

