[package]
name = "tcx-constants"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
lazy_static = "1.4.0"
serde_json = "1.0.88"
serde = { version = "1.0.147", features = ["derive"] }
parking_lot = "0.12.1"