[package]
name = "tcx-filecoin"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-chain = { path = "../tcx-chain" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }

prost = "0.6.1"
bytes = "0.5.4"
blake2b-rs = "0.1.5"
failure = "0.1.5"
byteorder = "1.3.2"
base32 = "^0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.0"
base64 = "0.12.0"

num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.0"}


hex = "0.4.0"
lazy_static = "1.4.0"

forest_vm = "0.2.1"
forest_message = "0.5.0"
forest_address = "0.2.3"
forest_encoding = "0.1.2"
forest_cid = "0.1.1"
