[package]
name = "tcx-filecoin"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-chain = { path = "../tcx-chain" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }

prost = "0.11.2"
bytes = "1.3.0"
blake2b-rs = "0.2.0"
failure = "0.1.8"
byteorder = "1.4.3"
base32 = "^0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.88"
base64 = "0.13.1"

num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.0"}


hex = "0.4.3"
lazy_static = "1.4.0"

forest_vm = "0.3.0"
forest_message = "0.6.0"
forest_address = "0.3.0"
forest_encoding = "0.2.0"
forest_cid = "0.3.0"
forest_crypto = "0.4.0"
