[package]
name = "tcx-polkadot"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-keyring = { path = "../../substrate/primitives/keyring" }
sp-core = { path = "../../substrate/primitives/core" }
hex = "0.4.0"
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
