[package]
name = "tcx-primitive"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-constants = { path = "../tcx-constants"}
bitcoin = "0.21.0"
byteorder = "1.2"
secp256k1 = {version ="0.15", features = ["recovery"] }
bitcoin_hashes = "0.7"
hex-literal = "0.2"
hex = "0.3.2"
lazy_static = "1.4.0"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
tiny-bip39 = "0.6.0"
bls-signatures = "0.6.1"
bls_key_derivation = "0.1.1"

num-bigint = "0.2.3"
num-traits = "0.2.8"

sp-core = "2.0.0-rc3"
regex = { version = "1.3.1"}
schnorrkel = "0.9.1"
