[package]
name = "tcx-primitive"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-constants = { path = "../tcx-constants"}
bitcoin = "0.25.1"
byteorder = "1.2"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
bitcoin_hashes = "0.9.3"
hex-literal = "0.2"
hex = "0.3.2"
lazy_static = "1.4.0"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
tiny-bip39 = "0.6.0"
ed25519-bip32 = "0.4.1"
blake2b_simd = "0.5.10"
iop-keyvault = "0.0.5"
bls-signatures = "0.6.1"
#rust-crypto = "0.2"
num-bigint = "0.2.3"
num-traits = "0.2.8"
sha2 = "0.9.1"
digest = "0.8"
hkdf = "0.9.0"

sp-core = "2.0.0-rc3"
regex = { version = "1.3.1"}
schnorrkel = "0.9.1"
