[package]
name = "tcx-proto"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.5.0"
bytes = "0.4.12"
prost-types = "0.5.0"

[lib]
name = "tcx_proto"
build = "build.rs"


[build-dependencies]
prost-build = "0.5.0"