[package]
name = "tcx-proto"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.2"
bytes = "1.3.0"
prost-types = "0.11.2"

[lib]
name = "tcx_proto"
build = "build.rs"


[build-dependencies]
prost-build = "0.11.4"