[package]
name = "tcx-tezos"
version = "0.1.0"
authors = ["xiaoguang <xiaoguang101010@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-chain = { path = "../tcx-chain" }
tcx-constants = { path = "../tcx-constants" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-crypto = { path = "../tcx-crypto" }

blake2b_simd = "0.5.10"
hex = "0.3.1"
bitcoin = "0.21.0"
ring = "0.16.9"