[package]
name = "tcx-tron"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2018"

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-chain = { path = "../tcx-chain" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }

prost = "0.6.1"
bytes = "0.5.4"

hex-literal = "0.1.4"
bitcoin = "0.25.1"
secp256k1 = {version ="0.22.2", features = ["rand", "recovery"] }
tiny-bip39 = "0.6.0"
bitcoin_hashes = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
uuid = { version = "0.7", features = ["serde", "v4"] }
failure = "0.1.5"
num-bigint = "0.2"
num-traits = "0.2"
num-integer = "0.1"
byteorder = "1.3.2"
bytebuffer = "0.2.1"
hex = "0.3.1"
sha3 = "0.8.2"
digest = "0.8.1"

