[package]
name = "tcx-tron"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2018"

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-chain = { path = "../tcx-chain" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }

prost = "0.11.2"
bytes = "1.3.0"

hex-literal = "0.1.4"
bitcoin = "0.29.2"
secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
tiny-bip39 = "0.7.3"
bitcoin_hashes = "0.11.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
failure = "0.1.8"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
byteorder = "1.4.3"
bytebuffer = "0.2.1"
hex = "0.4.3"
sha3 = "0.10.6"
digest = "0.10.6"

