[package]
name = "tcx"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

[dependencies]
tcx-proto = { path = "../tcx-proto" }
tcx-crypto = { path = "../tcx-crypto", features = ["cache_dk"] }
tcx-chain = { path = "../tcx-chain", features = ["cache_dk"] }
tcx-btc-fork = {path = "../tcx-btc-fork"}
tcx-bch = {path = "../tcx-bch"}
tcx-tron = {path = "../tcx-tron"}
tcx-ckb = {path = "../tcx-ckb"}
tcx-filecoin = {path = "../tcx-filecoin"}
tcx-substrate = {path = "../tcx-substrate"}
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants"}
tcx-tezos = {path = "../tcx-tezos"}

prost = "0.6.1"
bytes = "0.5.4"
prost-types = "0.6.1"

libc = "0.2.0"
log = "0.4.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.5"
lazy_static = "1.3.0"
hex = "0.4.0"
base64 = "0.10.1"
base58 = "0.1.0"
parking_lot = "0.10"

[lib]
name = "tcx"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.5.0"

[dev-dependencies]
sp-core = "2.0.0-rc3"
sp-runtime = "2.0.0-rc3"
