[package]
name = "tcx"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

[dependencies]
tcx-proto = { path = "../tcx-proto" }
tcx-crypto = { path = "../tcx-crypto", features = ["cache_dk"] }
tcx-chain = { path = "../tcx-chain", features = ["cache_dk"] }
tcx-btc-fork = {path = "../tcx-btc-fork"}
tcx-bch = {path = "../tcx-bch"}
tcx-tron = {path = "../tcx-tron"}
tcx-ckb = {path = "../tcx-ckb"}
tcx-filecoin = {path = "../tcx-filecoin"}
tcx-substrate = {path = "../tcx-substrate"}
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants"}
tcx-tezos = {path = "../tcx-tezos"}

prost = "0.11.2"
bytes = "1.3.0"
prost-types = "0.11.2"

libc = "0.2.138"
log = "0.4.17"
serde_json = "1.0.88"
serde = { version = "1.0.147", features = ["derive"] }
failure = "0.1.8"
lazy_static = "1.4.0"
hex = "0.4.3"
base64 = "0.13.1"
base58 = "0.2.0"
parking_lot = "0.12.1"

[lib]
name = "tcx"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.11.3"

[dev-dependencies]
sp-core = "7.0.0"
sp-runtime = "7.0.0"
