[package]
name = "bitcoin-cash"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

[dependencies]
tcx-crypto = { path = "../crypto" }
bch_addr = "0.1.0"
hex-literal = "0.1.4"
bitcoin = { path = "../../../rust-bitcoin"}
secp256k1 = '0.12.2'
tiny-bip39 = "0.6.0"
bitcoin_hashes = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
uuid = { version = "0.7", features = ["serde", "v4"] }
failure = "0.1.5"