[package]
name = "tcx-crypto"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.6"
tiny-keccak = "1.4"
scrypt = { version = "0.2", default-features = false }
ripemd160 = "0.8.0"
sha2 = "0.8.0"
digest = "0.8"
hmac = "0.7"
aes = "0.3.2"
aes-ctr = "0.3.0"
block-modes = "0.3.3"
aes-soft = "0.3.3"
pbkdf2 = "0.3.0"
memzero = "0.1"
bitcoin_hashes = "0.3.2"
crypto-mac = "0.7.0"
secp256k1 = '0.12.2'