[package]
name = "tcx-lib"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

[dependencies]
tcx-crypto = { path = "../crypto" }
tcx-chain = { path = "../chain" }
tcx-bch = {path = "../bitcoin-cash"}
libc = "0.2.0"
log = "0.4.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.5"

[build-dependencies]
bindgen = "0.49.0"

[lib]
name = "tcx"
crate-type = ["staticlib", "cdylib"]
#link = "TrezorCrypto"
build = "build.rs"